--- a/View/Master/SectionControllerFixed.html.twig
+++ b/View/Master/SectionControllerFixed.html.twig
@@ -41,14 +41,23 @@
                 </div>
                 <div class="column">
                     {# -- Section contents -- #}
-                    {% for sectionName, section in fsc.sections %}
-                        {% if sectionName != firstSectionName %}
-                            {% set divClass = (sectionName == fsc.active) or (fsc.active == firstSectionName and loop.index == 2) ? '' : 'd-hide' %}
-                            <div id="secDiv{{ sectionName }}" class="section-div {{ divClass }}">
-                                {{ fsc.setCurrentSection(sectionName) }}
-                                {% include section.template %}
-                            </div>
-                        {% endif %}
+                    {% for name, group in fsc.getSectionGroups() %}
+                        {% for sectionName, section in group %}
+                            {% if sectionName != firstSectionName %}
+                                {% set divClass = (sectionName == fsc.active) or (fsc.active == firstSectionName and loop.index == 2) ? '' : 'd-hide' %}
+                                <div id="secDiv{{ sectionName }}" class="section-div {{ divClass }}">
+                                    <div class="show-lg mb-2">
+                                        {% if name == '' %}
+                                            {{ section.title }}
+                                        {% else %}
+                                            {{ i18n.trans(name) }} / {{ section.title }}
+                                        {% endif %}
+                                    </div>
+                                    {{ fsc.setCurrentSection(sectionName) }}
+                                    {% include section.template %}
+                                </div>
+                            {% endif %}
+                        {% endfor %}
                     {% endfor %}
                 </div>
             </div>
@@ -108,20 +117,12 @@
     <div class="show-lg mb-2">
         <ul class="tab tab-block">
             {% for name, group in fsc.getSectionGroups() %}
-                {% if name != '' %}
-                </ul>
-                <ul class="tab tab-block">
-                    <li class="tab-item">
-                        {{ i18n.trans(name) }}
-                    </li>
-                {% endif %}
                 {% for sectionName, section in group %}
                     {% if sectionName != firstSectionName %}
                         {% set tabClass = (sectionName == fsc.active) or (fsc.active == firstSectionName and loop.index == 2 and name == '') ? 'active' : '' %}
                         <li class="tab-item">
                             <a href="#" id="secBtn{{ sectionName }}2" class="section-tab {{ tabClass }}" onclick="return showSection('{{ sectionName }}');">
                                 <i class="{{ section.icon }} fa-fw" aria-hidden="true"></i>
-                                <br/>{{ section.title }}
                             </a>
                         </li>
                     {% endif %}
