--- a/View/Macro/PortalTemplate.html.twig
+++ b/View/Macro/PortalTemplate.html.twig
@@ -150,8 +150,11 @@
             <div class="modal-header">
                 <a href="#close" onclick="return hideModal('logoutModal');" class="btn btn-clear float-right" aria-label="Close"></a>
                 <div class="modal-title h5">
-                    <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i> {{ fsc.contact.email }}
+                    <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i> {{ i18n.trans('email') }}
                 </div>
+                <p>
+                    <small>{{ fsc.contact.email }}</small>
+                </p>
             </div>
             <div class="modal-body">
                 <div class="content">
