--- a/View/Macro/PortalTemplate.html.twig
+++ b/View/Macro/PortalTemplate.html.twig
@@ -2,7 +2,7 @@
     <form method="get">
         <input type="hidden" name="okCookies" value="TRUE"/>
         <div class="toast cookies">
-            {{ cookiesPage.description | raw }} <button type="submit" class="btn">{{ i18n.trans('accept') }}</button>
+            {{ cookiesPage.description | raw }} <button type="submit" class="btn btn-sm">{{ i18n.trans('accept') }}</button>
             <a href="{{ cookiesPage.url('public') }}">{{ i18n.trans('read-more') }}</a>
         </div>
     </form>
