--- a/View/Section/EditListSection.html.twig
+++ b/View/Section/EditListSection.html.twig
@@ -69,7 +69,7 @@
                         <div class="column">
                             <button type="button" class="btn btn-error" onclick="showSectionDelete('{{ section.getViewName() ~ counter }}');">
                                 <i class="fas fa-trash-alt fa-fw" aria-hidden="true"></i>
-                                {{ i18n.trans('delete') }}
+                                <span class="hide-sm">{{ i18n.trans('delete') }}</span>
                             </button>
                         </div>
                     {% endif %}
@@ -81,11 +81,11 @@
                     <div class="column text-right">
                         <button class="btn btn-secondary" type="reset">
                             <i class="fas fa-undo fa-fw" aria-hidden="true"></i>
-                            {{ i18n.trans('undo') }}
+                            <span class="hide-sm">{{ i18n.trans('undo') }}</span>
                         </button>
                         <button class="btn btn-primary" type="submit">
                             <i class="fas fa-save fa-fw" aria-hidden="true"></i>
-                            {{ i18n.trans('save') }}
+                            <span class="hide-sm">{{ i18n.trans('save') }}</span>
                         </button>
                     </div>
                 </div>
