--- a/View/Master/PortalTemplate.html.twig
+++ b/View/Master/PortalTemplate.html.twig
@@ -39,42 +39,46 @@
         {% if fsc.showCookiesPolicy %}{{ Macros.cookiesMessage(i18n, fsc.menuComposer.cookiesPage()) }}{% endif %}
         {% block navbar %}
             <div class="navbar navbar-top">
+                <div class="navbar-section show-xs">
+                    {{ Macros.TopMenuSmall(fsc, i18n) }}
+                </div>
                 <div class="navbar-section hide-xs">
+                    <img src="{{ asset('Dinamic/Assets/Images/logo.png') }}" width="30" height="30" alt="{{ webTitle }}" />
+                    &nbsp;{{ webTitle }}
+                </div>
+                <div class="navbar-center hide-xs">
                     {{ Macros.TopMenu(fsc, i18n) }}
                 </div>
-                <div class="navbar-center">
-                    {{ Macros.TopMenuSmall(fsc, i18n) }}
-                    <img src="{{ asset('Dinamic/Assets/Images/logo.png') }}" width="30" height="30" alt="{{ webTitle }}" class="hide-xs" />
-                </div>
                 <div class="navbar-section">
-                    <a class="btn" href="{{ constant('FS_ROUTE') }}/WebSearch">
-                        <i class="fas fa-search fa-fw" aria-hidden="true"></i>
-                        <span class="hide-md">{{ i18n.trans('search') }}</span>
-                    </a>
-                    &nbsp;
-                    {% if fsc.user %}
-                        <div class="btn-group">
-                            <a class="btn" href="{{ constant('FS_ROUTE') }}/{{ fsc.webPage.url('edit') }}">
-                                <i class="fas fa-edit fa-fw" aria-hidden="true"></i>
-                            </a>
-                            <a class="btn btn-success" href="{{ constant('FS_ROUTE') }}/ListWebPage">
-                                <i class="fas fa-sign-in-alt fa-fw" aria-hidden="true"></i>
-                            </a>
-                        </div>
-                    {% elseif fsc.contact %}
-                        <a class="btn btn-success" href="#" onclick="return showModal('logoutModal');">
-                            <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i>
-                            <span>{{ fsc.contact.alias() }}</span>
+                    {% block navbarButtons %}
+                        <a class="btn" href="{{ constant('FS_ROUTE') }}/WebSearch">
+                            <i class="fas fa-search fa-fw" aria-hidden="true"></i>
+                            <span class="hide-md">{{ i18n.trans('search') }}</span>
                         </a>
-                    {% else %}
-                        <a class="btn btn-primary" href="#" onclick="return showModal('loginModal');">
-                            <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i>
-                            <span class="hide-md">{{ i18n.trans('login') }}</span>
-                        </a>
-                    {% endif %}
+                        &nbsp;
+                        {% if fsc.user %}
+                            <div class="btn-group">
+                                <a class="btn" href="{{ constant('FS_ROUTE') }}/{{ fsc.webPage.url('edit') }}">
+                                    <i class="fas fa-edit fa-fw" aria-hidden="true"></i>
+                                </a>
+                                <a class="btn btn-success" href="{{ constant('FS_ROUTE') }}/ListWebPage">
+                                    <i class="fas fa-sign-in-alt fa-fw" aria-hidden="true"></i>
+                                </a>
+                            </div>
+                        {% elseif fsc.contact %}
+                            <a class="btn btn-success" href="#" onclick="return showModal('logoutModal');">
+                                <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i>
+                                <span>{{ fsc.contact.alias() }}</span>
+                            </a>
+                        {% else %}
+                            <a class="btn btn-primary" href="#" onclick="return showModal('loginModal');">
+                                <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i>
+                                <span class="hide-md">{{ i18n.trans('login') }}</span>
+                            </a>
+                        {% endif %}
+                    {% endblock %}
                 </div>
             </div>
-            <div class="divider text-center" data-content="{{ webTitle }}"></div>
         {% endblock %}
         {% block messages %}
             <div class="container">
