Minor visual improvements.

--- a/View/Master/LoginToContinue.html.twig
+++ b/View/Master/LoginToContinue.html.twig
@@ -45,7 +45,7 @@
                                             {% endif %}
                                             <p>{{ i18n.trans('login-with-social-or-email') }}</p>
                                         </div>
-                                        <div class="divider-vert"></div>
+                                        <div class="divider-vert hide-xs"></div>
                                     {% endif %}
                                     {% if fsLogin %}
                                         <div class="column">
