--- a/Assets/CSS/webportal.css
+++ b/Assets/CSS/webportal.css
@@ -56,7 +56,7 @@ h2, h3, h4, h5 {
 
 .navbar-top {
     background-color: #F8F9FA;
-    border-bottom: 1px solid #E0E3E7;
+    box-shadow: 0px 2px 2px silver;
     margin-bottom: 10px;
     padding: 10px;
 }
