- WebPageClass now extends from ModelOnChangeClass to improve functionalities. - Minor visual improvements.

--- a/View/Master/SectionControllerFixed.html.twig
+++ b/View/Master/SectionControllerFixed.html.twig
@@ -49,9 +49,7 @@
     {% if links | length > 0 %}
         <div class="container">
             <div class="columns">
-                <div class="column col-2 col-xs-12">
-                </div>
-                <div class="column">
+                <div class="column text-center">
                     <ul class="breadcrumb">
                         {% for link in links %}
                             <li class="breadcrumb-item">
