--- a/Assets/CSS/webportal.css
+++ b/Assets/CSS/webportal.css
@@ -1,6 +1,6 @@
 /*
  * This file is part of webportal plugin for FacturaScripts.
- * Copyright (C) 2018 Carlos Garcia Gomez <carlos@facturascripts.com>
+ * Copyright (C) 2018-2019 Carlos Garcia Gomez <carlos@facturascripts.com>
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Lesser General Public License as
@@ -56,7 +56,7 @@ h2, h3, h4, h5 {
 
 .navbar-top {
     background-color: #F8F9FA;
-    box-shadow: 0px 2px 2px silver;
+    border-bottom: 1px solid #E0E3E7;
     margin-bottom: 10px;
     padding: 10px;
 }
