--- a/View/Section/EditProfile.html.twig
+++ b/View/Section/EditProfile.html.twig
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="columns">
-        <div class="column col-2 col-xs-12 text-right">
+        <div class="column col-2 col-sm-12 text-right">
             <span class="label">{{ fsc.contact.alias() }}</span>
             <br/>
             <img src="{{ fsc.contact.gravatar() }}" alt="{{ fsc.contact.fullName() }}" class="custom-img-responsive"/>
@@ -14,37 +14,37 @@
             <form method="post">
                 <input type="hidden" name="action" value="edit"/>
                 <div class="columns">
-                    <div class="column col-6">
+                    <div class="column col-6 col-sm-12">
                         <div class="form-group">
                             <label class="form-label">{{ i18n.trans('name') }}</label>
                             <input class="form-input" type="text" name="nombre" value="{{ fsc.contact.nombre }}" autocomplete="off" required=""/>
                         </div>
                     </div>
-                    <div class="column col-6">
+                    <div class="column col-6 col-sm-12">
                         <div class="form-group">
                             <label class="form-label">{{ i18n.trans('surname') }}</label>
                             <input class="form-input" type="text" name="apellidos" value="{{ fsc.contact.apellidos }}" autocomplete="off"/>
                         </div>
                     </div>
-                    <div class="column col-6">
+                    <div class="column col-6 col-sm-12">
                         <div class="form-group">
                             <label class="form-label">{{ i18n.trans('address') }}</label>
                             <input class="form-input" type="text" name="direccion" value="{{ fsc.contact.direccion }}" autocomplete="off"/>
                         </div>
                     </div>
-                    <div class="column col-6">
+                    <div class="column col-6 col-sm-12">
                         <div class="form-group">
                             <label class="form-label">{{ i18n.trans('city') }}</label>
                             <input class="form-input" type="text" name="ciudad" value="{{ fsc.contact.ciudad }}" autocomplete="off"/>
                         </div>
                     </div>
-                    <div class="column col-4">
+                    <div class="column col-4 col-sm-12">
                         <div class="form-group">
                             <label class="form-label">{{ i18n.trans('province') }}</label>
                             <input class="form-input" type="text" name="provincia" value="{{ fsc.contact.provincia }}" autocomplete="off"/>
                         </div>
                     </div>
-                    <div class="column col-4">
+                    <div class="column col-4 col-sm-12">
                         <div class="form-group">
                             <label class="form-label">{{ i18n.trans('country') }}</label>
                             <select class="form-select" name="codpais">
@@ -58,19 +58,19 @@
                             </select>
                         </div>
                     </div>
-                    <div class="column">
+                    <div class="column col-sm-12">
                         <div class="form-group">
                             <label class="form-label">{{ i18n.trans('postalmail') }}</label>
                             <input class="form-input" type="text" name="apartado" value="{{ fsc.contact.apartado }}" maxlength="10" autocomplete="off"/>
                         </div>
                     </div>
-                    <div class="column">
+                    <div class="column col-sm-12">
                         <div class="form-group">
                             <label class="form-label">{{ i18n.trans('zip-code') }}</label>
                             <input class="form-input" type="text" name="codpostal" value="{{ fsc.contact.codpostal }}" maxlength="10" autocomplete="off"/>
                         </div>
                     </div>
-                    <div class="column col-6">
+                    <div class="column col-6 col-sm-12">
                         <div class="form-group">
                             <label class="form-label">{{ i18n.trans('new-password') }}</label>
                             <div class="input-group">
@@ -81,7 +81,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="column col-6">
+                    <div class="column col-6 col-sm-12">
                         <div class="form-group">
                             <label class="form-label">{{ i18n.trans('repeat-new-password') }}</label>
                             <div class="input-group">
