Minor visual improvements.

--- a/View/Master/Portal404.html.twig
+++ b/View/Master/Portal404.html.twig
@@ -10,7 +10,8 @@
                         <div class="empty-icon">
                             <i class="fas fa-search fa-3x" aria-hidden="true"></i>
                         </div>
-                        <h1 class="empty-title h5">{{ i18n.trans('no-data') }}</h1>
+                        <h1 class="empty-title h5">{{ i18n.trans('page-not-found') }}</h1>
+                        <p>{{ i18n.trans('page-not-found-paragraph') }}</p>
                     </div>
                 </div>
             </div>
