--- a/View/Master/PortalTemplate.html.twig
+++ b/View/Master/PortalTemplate.html.twig
@@ -61,7 +61,7 @@
                                 <a class="btn" href="{{ constant('FS_ROUTE') }}/{{ fsc.webPage.url('edit') }}">
                                     <i class="fas fa-edit fa-fw" aria-hidden="true"></i>
                                 </a>
-                                <a class="btn" href="{{ constant('FS_ROUTE') }}/ListWebPage">
+                                <a class="btn btn-success" href="{{ constant('FS_ROUTE') }}/ListWebPage">
                                     <i class="fas fa-sign-in-alt fa-fw" aria-hidden="true"></i>
                                 </a>
                             </div>
